--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,15 @@
 <app-iseeq-menu></app-iseeq-menu>
 <h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
+<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
+<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
+<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
+<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
+<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
+<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
+<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
+<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
+<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
+<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
+<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
+<router-outlet></router-outlet>
+
