--- a/src/app/components/iseeq-menu/iseeq-menu.component.css
+++ b/src/app/components/iseeq-menu/iseeq-menu.component.css
@@ -1,13 +1,26 @@
 a{
+    font-family:'Roboto', sans-serif;
+    font-size: 14px;
+    font-weight:900;
     text-decoration: none;
     color:black;
     margin-right:3%;
 }
+.active-link{
+    color:#45d48b;
+}
+img{
+   height:30px;
+}
 .menu-container{
+    position: fixed;
+    top:0px;
+    width:100%;
     display:flex;
     padding-top:20px;
     padding-bottom: 20px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
+    opacity:0.9;
 }
 .menu-logo-container{
     flex-grow: 2;
@@ -15,6 +28,7 @@ a{
     padding-left:3%;
 }
 .menu-link-container{
+    padding-top: 10px;
     flex-grow:8;
     text-align:right;
 }
@@ -22,22 +36,33 @@ a{
 /* ------------------Menu mobile view--------------*/
 .menu-container-s{
     background-color: white;
+    opacity:0.9;
+    position: fixed;
+    top:0px;
+    width:100%;
 }
 .menu-flex-container-s{
     display:flex;
-    padding-top:10px;
-    padding-bottom: 10px;
+    padding-top:5px;
+    padding-bottom: 5px;
    
 }
 .menu-logo-container-s{
     flex-grow: 5;
     min-width: 100px;
-    padding-left:3%;
+    padding-top:5px;
+    padding-left:2%;
 }
 .menu-control-s{
     flex-grow: 5;
     text-align:right;
-    padding-right: 3%;
+    padding-right: 2%;
+}
+mat-icon{
+    font-size: 40px;
+    width:40px;
+    height: 40px;
+    cursor: pointer;
 }
 
 .menu-link-container-s{
