--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,9 @@
 <app-iseeq-menu></app-iseeq-menu>
-<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
-<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
-<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
-<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
-<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
-<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
-<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
-<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
-<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
-<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
-<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
-<h1 style="text-align: center;color:white">Wellcome IseeQ</h1>
+
+<div style="
+background-color: aqua;width:100%;height:670px;text-align:cenrer;box-sizing:border-box;padding-top:200px">
+    <h1> Játék Háttérkép</h1>
+</div>
+
 <router-outlet></router-outlet>
 
