--- a/src/app/components/iseeq-home/iseeq-home.component.html
+++ b/src/app/components/iseeq-home/iseeq-home.component.html
@@ -1,3 +1,4 @@
-<p>
-  iseeq-home works!
-</p>
+
+<div style="position:absolute;top:0px;width:100%;height:500px;background-color:blueviolet;opacity: 0.5;">
+<h1>iseeq-home works!</h1>
+</div>
