--- a/src/app/ContetntFeature/components/iseeq-base-content/iseeq-base-content.component.html
+++ b/src/app/ContetntFeature/components/iseeq-base-content/iseeq-base-content.component.html
@@ -1,7 +1,5 @@
-<app-iseeq-services></app-iseeq-services>
-<app-iseeq-team></app-iseeq-team>
-<app-iseeq-about></app-iseeq-about>
-<app-iseeq-clients></app-iseeq-clients>
-<app-iseeq-news></app-iseeq-news>
-<app-iseeq-contact></app-iseeq-contact>
+
+<!-- <app-iseeq-services *ngIf="_iNavService.openedContent[0]"></app-iseeq-services> -->
+<ng-template #template ></ng-template>
+
 
