--- a/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.html
+++ b/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.html
@@ -1,3 +1,5 @@
-<p>
-  iseeq-about works!
-</p>
+<div style="
+background-color: rgb(255, 0, 255);width:100%;height:670px;text-align:cenrer;box-sizing:border-box;padding-top:200px">
+    <h1>  iseeq-abaut works!</h1>
+</div>
+
