--- a/src/app/ContetntFeature/components/iseeq-clients/iseeq-clients.component.html
+++ b/src/app/ContetntFeature/components/iseeq-clients/iseeq-clients.component.html
@@ -1,3 +1,4 @@
-<p>
-  iseeq-clients works!
-</p>
+<div style="
+background-color: rgb(255, 0, 47);width:100%;height:670px;text-align:cenrer;box-sizing:border-box;padding-top:200px">
+    <h1>  iseeq-clients works!</h1>
+</div>
