--- a/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.html
+++ b/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.html
@@ -1,3 +1,5 @@
-<p>
-  iseeq-services works!
-</p>
+<div style="
+background-color: rgb(0, 255, 136);width:100%;height:670px;text-align:cenrer;box-sizing:border-box;padding-top:200px">
+    <h1> iseeq-services works!</h1>
+</div>
+
