--- a/src/app/ContetntFeature/components/iseeq-team/iseeq-team.component.html
+++ b/src/app/ContetntFeature/components/iseeq-team/iseeq-team.component.html
@@ -1,3 +1,5 @@
-<p>
-  iseeq-team works!
-</p>
+<div style="
+background-color: rgb(0, 30, 255);width:100%;height:670px;text-align:cenrer;box-sizing:border-box;padding-top:200px">
+    <h1>  iseeq-team works!</h1>
+</div>
+
