--- a/src/app/components/iseeq-menu/iseeq-menu.component.html
+++ b/src/app/components/iseeq-menu/iseeq-menu.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="menu-link-container">
-        <a *ngFor="let menuitem of menuItems" routerLink="/{{menuitem.toLowerCase()}}" routerLinkActive="active-link">{{menuitem}}</a>
+        <a *ngFor="let menuitem of menuItems" routerLink="/{{menuitem.menuItem.toLowerCase()}}" routerLinkActive="active-link">{{menuitem.menuItem}}</a>
     </div>
 
 </div>
@@ -26,7 +26,7 @@
     </div>
     
     <div [@isOpen]="isSMenuOpen" class="menu-link-container-s">
-        <a *ngFor="let menuitem of menuItems" routerLink="/{{menuitem.toLowerCase()}}" routerLinkActive="active-link">{{menuitem}}</a>
+        <a *ngFor="let menuitem of menuItems" routerLink="/{{menuitem.menuItem.toLowerCase()}}" routerLinkActive="active-link">{{menuitem.menuItem}}</a>
     </div>
 
 </div>
