--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,6 @@
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 body{
     margin:0px;
-    background-color:lightgray;
+    background-color:white;
    
 }
