--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <app-iseeq-menu></app-iseeq-menu>
 
-<div style="
+<!--<div style="
 background-color: aqua;width:100%;height:800px;text-align:cenrer;box-sizing:border-box;padding-top:200px">
     <h1> Játék Háttérkép</h1>
-</div>
+</div>-->
 
 <router-outlet></router-outlet>
 
