--- a/src/app/ContetntFeature/components/iseeq-base-content/iseeq-base-content.component.html
+++ b/src/app/ContetntFeature/components/iseeq-base-content/iseeq-base-content.component.html
@@ -1,10 +1,10 @@
 <div style="scroll-behavior: auto" [style.visibility]="navService.isContentVisible ? 'visible':'hidden'" >
-    <app-iseeq-services iseeqContentSite *ngIf="navService.componentRemote[0]" [isFirstSite]="true" ></app-iseeq-services>
-    <app-iseeq-team     iseeqContentSite  *ngIf="navService.componentRemote[1]" ></app-iseeq-team>
-    <app-iseeq-about    iseeqContentSite *ngIf="navService.componentRemote[2]" ></app-iseeq-about>
-    <app-iseeq-clients  iseeqContentSite *ngIf="navService.componentRemote[3]" ></app-iseeq-clients>
-    <app-iseeq-news     iseeqContentSite  *ngIf="navService.componentRemote[4]" ></app-iseeq-news>
-    <app-iseeq-contact  iseeqContentSite *ngIf="navService.componentRemote[5]" ></app-iseeq-contact>
+    <app-iseeq-services iseeqContentSite *ngIf="navService.componentRemote[0]" [isFirstSite]="true" scrollNavigationParam="/home/services" ></app-iseeq-services>
+    <app-iseeq-team     iseeqContentSite  *ngIf="navService.componentRemote[1]" scrollNavigationParam="/home/team"></app-iseeq-team>
+    <app-iseeq-about    iseeqContentSite *ngIf="navService.componentRemote[2]" scrollNavigationParam="/home/about"></app-iseeq-about>
+    <app-iseeq-clients  iseeqContentSite *ngIf="navService.componentRemote[3]" scrollNavigationParam="/home/clients"></app-iseeq-clients>
+    <app-iseeq-news     iseeqContentSite  *ngIf="navService.componentRemote[4]" scrollNavigationParam="/home/news"></app-iseeq-news>
+    <app-iseeq-contact  iseeqContentSite *ngIf="navService.componentRemote[5]" scrollNavigationParam="/home/contact"></app-iseeq-contact>
 </div>
 
 
