--- a/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.html
+++ b/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.html
@@ -1,5 +1,5 @@
 <div style="
-background-color: rgb(255, 0, 255);width:100%;height:800px;text-align:cenrer;box-sizing:border-box;padding-top:200px">
+background-color: rgb(255, 0, 255);width:100%;height:800px">
     <h1>  iseeq-abaut works!</h1>
 </div>
 
