--- a/src/app/ContetntFeature/components/iseeq-clients/iseeq-clients.component.html
+++ b/src/app/ContetntFeature/components/iseeq-clients/iseeq-clients.component.html
@@ -1,4 +1,4 @@
 <div style="
-background-color: rgb(255, 0, 47);width:100%;height:800px;text-align:cenrer;box-sizing:border-box;padding-top:200px">
+background-color: rgb(255, 0, 47);width:100%;height:800px">
     <h1>  iseeq-clients works!</h1>
 </div>
