--- a/src/app/ContetntFeature/components/iseeq-contact/iseeq-contact.component.html
+++ b/src/app/ContetntFeature/components/iseeq-contact/iseeq-contact.component.html
@@ -1,4 +1,4 @@
 <div style="
-background-color: rgb(96, 100, 133);width:100%;height:800px;text-align:cenrer;box-sizing:border-box;padding-top:200px">
+background-color: rgb(96, 100, 133);width:100%;height:800px">
     <h1>  iseeq-contact works!</h1>
 </div>
