--- a/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.html
+++ b/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.html
@@ -1,5 +1,5 @@
 <div style="
-background-color: rgb(0, 255, 136);width:100%;height:800px;text-align:cenrer;box-sizing:border-box;padding-top:200px">
+background-color:green;width:100%;height:800px;">
     <h1> iseeq-services works!</h1>
     
 </div>
