--- a/src/app/ContetntFeature/components/iseeq-team/iseeq-team.component.html
+++ b/src/app/ContetntFeature/components/iseeq-team/iseeq-team.component.html
@@ -1,5 +1,5 @@
 <div style="
-background-color: rgb(0, 30, 255);width:100%;height:800px;text-align:cenrer;box-sizing:border-box;padding-top:200px">
+background-color: rgb(0, 30, 255);width:100%;height:800px">
     <h1>  iseeq-team works!</h1>
 </div>
 
