--- a/src/app/ContetntFeature/components/iseeq-contact/iseeq-contact.component.html
+++ b/src/app/ContetntFeature/components/iseeq-contact/iseeq-contact.component.html
@@ -1,4 +1,4 @@
 <div style="
-background-color: rgb(96, 100, 133);width:100%;height:800px">
-    <h1>  iseeq-contact works!</h1>
+background-color: rgb(96, 100, 133);width:100%;height:1200px">
+    <span>  iseeq-contact works!</span>
 </div>
