--- a/src/app/ContetntFeature/components/iseeq-news/iseeq-news.component.html
+++ b/src/app/ContetntFeature/components/iseeq-news/iseeq-news.component.html
@@ -1,4 +1,4 @@
 <div style="
 background-color: rgb(255, 123, 0);width:100%;height:800px">
-    <h1>  iseeq-news works!</h1>
+    <span>  iseeq-news works!</span>
 </div>
