--- a/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.html
+++ b/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.html
@@ -1,6 +1,6 @@
 <div style="
-background-color:green;width:100%;height:800px;">
-    <h1> iseeq-services works!</h1>
+background-color:green;width:100%;height:1500px;">
+    <span> iseeq-services works!</span>
     
 </div>
 
