--- a/src/app/components/iseeq-home/iseeq-home.component.html
+++ b/src/app/components/iseeq-home/iseeq-home.component.html
@@ -1,4 +1,4 @@
 
 <div style="width:100%;height:1000px;background-color:blueviolet;opacity: 0.5;">
-<h1>iseeq-home works!</h1>
+<span>iseeq-home works!</span>
 </div>
