--- a/src/app/components/iseeq-home/iseeq-home.component.html
+++ b/src/app/components/iseeq-home/iseeq-home.component.html
@@ -1,4 +1,7 @@
 
-<div style="width:100%;height:1000px;background-color:blueviolet;opacity: 0.5;">
+<div style="width:100%;height:1000px;background-color:blueviolet">
 <span>iseeq-home works!</span>
+<h2>Madách Imre</h2>
+<h3>sdfsdfsdfdsfdfsd</h3>
+<h4>Ravetzky Richárd</h4>
 </div>
