--- a/src/app/components/iseeq-menu/iseeq-menu.component.css
+++ b/src/app/components/iseeq-menu/iseeq-menu.component.css
@@ -1,8 +1,6 @@
 a{
-    font-family:'Roboto', sans-serif;
+    font-family:'opensansbld', sans-serif;
     font-size: 14px;
-    font-weight:900;
-    text-decoration: none;
     color:black;
     margin-right:3%;
 }
