--- a/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.html
+++ b/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.html
@@ -1,6 +1,64 @@
-<div style="
-background-color:green;width:100%;height:800px;">
-    <h1> iseeq-services works!</h1>
+<div style="border:2px solid red;width:100%;">
+    <h1 class="site-title">SERVICES</h1>
+
     
+
+<div class="services-container">
+
+            <div class="services-collum">
+                <div class="services-collum-picture"></div>
+                <div class="services-collum-title"></div>
+                <div class="services-collum-text"></div>
+                <div class="services-collum-button"></div> 
+            </div>
+
+            <div class="services-collum">
+                <div class="services-collum-picture"></div>
+                <div class="services-collum-title"></div>
+                <div class="services-collum-text"></div>
+                <div class="services-collum-button"></div> 
+            </div>
+
+            <div class="services-collum">
+                <div class="services-collum-picture"></div>
+                <div class="services-collum-title"></div>
+                <div class="services-collum-text"></div>
+                <div class="services-collum-button"></div> 
+            </div>
+
+
+
+</div>
+
+<h2 class="alcim">jkhkjahjk jsdfhas jfljk lkjfkasdj lkj fasd flkdjf</h2>
+
+
+<div class="services-container2">
+
+            <div class="services-collum2">
+                <div class="services-collum-picture"></div>
+                <div class="services-collum-title"></div>
+                <div class="services-collum-text"></div>
+                <div class="services-collum-button"></div> 
+            </div>
+
+            <div class="services-collum2">
+                <div class="services-collum-picture"></div>
+                <div class="services-collum-title"></div>
+                <div class="services-collum-text"></div>
+                <div class="services-collum-button"></div> 
+            </div>
+
+            <div class="services-collum2">
+                <div class="services-collum-picture"></div>
+                <div class="services-collum-title"></div>
+                <div class="services-collum-text"></div>
+                <div class="services-collum-button"></div> 
+            </div>
+
+
+
+</div>
+
 </div>
 
