--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
 body{
     margin:0px;
     background-color:white;
-   
 }
+
+.site-title{
+    -webkit-margin-before:0px;
+    -webkit-margin-after: 0px;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    font-size:21px;
+    color:#343399;
+    font-family: 'Press Start 2P', cursive;
+    text-align: center;
+}
+
+/*Press Start 2P
+font-family: 'Press Start 2P', cursive;
+*/
