--- a/src/app/ContetntFeature/components/iseeq-news/iseeq-news.component.html
+++ b/src/app/ContetntFeature/components/iseeq-news/iseeq-news.component.html
@@ -1,8 +1,3 @@
-<div style="
-background-color: rgb(255, 123, 0);width:100%;height:800px">
-<<<<<<< HEAD
-    <h1 class="site-title">  iseeq-news works!</h1>
-=======
-    <span>  iseeq-news works!</span>
->>>>>>> f2dc8a6dac6005b269889274eba3019ece2393a5
+<div class="site-base">
+    <h2 class="site-title">NEWS</h2>
 </div>
