--- a/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.html
+++ b/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.html
@@ -1,12 +1,5 @@
-<<<<<<< HEAD
-<div style="border:2px solid red;width:100%;">
-    <h1 class="site-title">SERVICES</h1>
-
-=======
-<div style="
-background-color:green;width:100%;height:1500px;">
-    <span> iseeq-services works!</span>
->>>>>>> f2dc8a6dac6005b269889274eba3019ece2393a5
+<div class="site-base">
+    <h2 class="site-title">SERVICES</h2>
     
 
 <div class="services-container">
