--- a/src/app/components/iseeq-footer/iseeq-footer.component.html
+++ b/src/app/components/iseeq-footer/iseeq-footer.component.html
@@ -1,43 +1,23 @@
 <div class="footer-container">
 
     <div class="footer-links footer-container-member">
-        <a target="_blank" href="/PrivacyPolicy">Privacy policy<br>(Adatvédelmi tájékoztató)</a><br>
-        <a href="/SiteMap">Site map</a><br> 
+        <a *ngFor="let leftLink of configData?.leftLinks" href="{{leftLink.link}}">{{leftLink.label}}</a><br>
     </div>
 
     <div class="footer-contacts footer-container-member">
           <h3>IseeQ Kft</h3>
-          <span>1075 Budapest Madach Imre str. 13-14. Hungary</span><br>
-          <span>Email: hello@iseeq.hu</span>
+          <span>{{configData?.adress}}</span><br>
+          <span>{{configData?.email}}</span>
 
     </div>
 
-    <div class="footer-socialmedia footer-container-member">
+    <div class="footer-socialmedia footer-container-member" >
         
-        <a target="_blank" href="https://medium.com/@IseeQ">
+        <a *ngFor="let rightLink of configData?.rightLinks" href="{{rightLink.link}}" target="_blank">
         <div class="socialmedia-link" >
-          <img src="/assets/pictures/ikon/medium.svg"  width="20" height="20" alt="recruiment medium link">
+          <img src="{{rightLink.ikon}}"  width="20" height="20" alt="{{rightLink.alt}}">
         </div>
         </a> 
-      
-        <a target="_blank" href="https://www.facebook.com/IseeQ.co">
-        <div class="socialmedia-link">
-          <img src="/assets/pictures/ikon/facebook.svg" width="20" height="20" alt="iseeq facebook link">
-        </div>
-        </a>
-        
-        <a target="_blank" href="https://www.instagram.com/iseeq.co/">
-        <div class="socialmedia-link" >
-            <img src="/assets/pictures/ikon/instagram.svg" width="20" height="20" alt="headhunting instagram link">
-        </div>
-        </a>  
-         
-
-        <a target="_blank" href="https://www.linkedin.com/company/iseeq/">
-        <div class="socialmedia-link">
-            <img src="/assets/pictures/ikon/linkedin.svg" width="20" height="20" alt="team building linkedin link">
-        </div>
-        </a>
 
     </div>
 
