--- a/src/app/components/iseeq-home/iseeq-home.component.html
+++ b/src/app/components/iseeq-home/iseeq-home.component.html
@@ -1,7 +1,8 @@
 
-<div style="width:100%;height:1000px;background-color:blueviolet">
-<span>iseeq-home works!</span>
-<h2>Madách Imre</h2>
-<h3>sdfsdfsdfdsfdfsd</h3>
-<h4>Ravetzky Richárd</h4>
+<div class="home-base">
+    <!--<h1>hsdhfshjksdhfs</h1> -->
+    <div class="home-blure">
+       <a href="/game">game</a><br>
+       <a href="/home/services">services</a>
+    </div>   
 </div>
