--- a/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.html
+++ b/src/app/ContetntFeature/components/iseeq-about/iseeq-about.component.html
@@ -1,5 +1,4 @@
-<div style="
-background-color: rgb(255, 0, 255);width:100%;height:800px">
-    <span>  iseeq-abaut works!</span>
+<div class="site-base">
+    <h2 class="site-title">ABOUT</h2>
 </div>
 
