--- a/src/app/ContetntFeature/components/iseeq-clients/iseeq-clients.component.html
+++ b/src/app/ContetntFeature/components/iseeq-clients/iseeq-clients.component.html
@@ -1,4 +1,3 @@
-<div style="
-background-color: rgb(255, 0, 47);width:100%;height:1500px">
-    <span>  iseeq-clients works!</span>
+<div class="site-base">
+    <h2 class="site-title">CLIENTS</h2>
 </div>
