--- a/src/app/ContetntFeature/components/iseeq-contact/iseeq-contact.component.html
+++ b/src/app/ContetntFeature/components/iseeq-contact/iseeq-contact.component.html
@@ -1,4 +1,3 @@
-<div style="
-background-color: rgb(96, 100, 133);width:100%;height:1200px">
-    <span>  iseeq-contact works!</span>
+<div class="site-base">
+    <h2 class="site-title">CONTACT</h2>
 </div>
