--- a/src/app/ContetntFeature/components/iseeq-team/iseeq-team.component.html
+++ b/src/app/ContetntFeature/components/iseeq-team/iseeq-team.component.html
@@ -1,5 +1,4 @@
-<div style="
-background-color: rgb(0, 30, 255);width:100%;height:1800px">
-    <span>  iseeq-team works!</span>
+<div class="site-base">
+    <h2 class="site-title">TEAM</h2>
 </div>
 
