--- a/src/app/components/iseeq-footer/iseeq-footer.component.css
+++ b/src/app/components/iseeq-footer/iseeq-footer.component.css
@@ -18,6 +18,11 @@ a:hover{text-decoration: underline;}
     color:rgb(232, 231, 248);
 }
 
+.footer-links{
+    display: flex;
+    flex-direction: column;
+}
+
 .footer-container-member{min-width:400px;}
 
 .footer-contacts{
