--- a/src/app/components/iseeq-home/iseeq-home.component.css
+++ b/src/app/components/iseeq-home/iseeq-home.component.css
@@ -1,16 +1,24 @@
-span{
-    font-family: 'bitbold'
+/*Az alap meretezo es pozicionalo clssokat a képméret fügvényében max-width;max-height ..classokat */
+a{
+    text-decoration:none;
+    color:white;
 }
-
-h2{
-    font-family: 'brandonbld',Helvetica,Arial,sans-serif;
+.home-base{
+    width:100%;
+    height:100%;
+    min-height:800px;
+    border: 1px solid red;
+}
+.home-blure{
+    min-height:800px;
+    position:absolute;
+    top:0px;
+    color:white;
+    width:100%;
+    height:100%;
+    background-color:black;
+    opacity:0.4;
+    z-index: 1;
     
-}
 
-h3{
-    font-family: 'opensans'
-}
-
-h4{
-    font-family: 'opensansbld'
 }
