--- a/src/app/components/iseeq-menu/iseeq-menu.component.css
+++ b/src/app/components/iseeq-menu/iseeq-menu.component.css
@@ -1,6 +1,6 @@
 a{
     font-family:'opensansbld', sans-serif;
-    font-size: 14px;
+    font-size: 16px;
     color:black;
     margin-right:3%;
 }
@@ -19,7 +19,7 @@ img{
     padding-bottom: 20px;
     background-color: rgb(255, 255, 255);
     opacity:0.9;
-    z-index: +1;
+    z-index: 2;
 }
 .menu-logo-container{
     flex-grow: 2;
