--- a/src/app/components/iseeq-privacypolicy/iseeq-privacypolicy.component.html
+++ b/src/app/components/iseeq-privacypolicy/iseeq-privacypolicy.component.html
@@ -1,3 +1,14 @@
-<p>
-  iseeq-privacypolicy works!
-</p>
+<div>
+<div class="policy-header">
+  <span (click)="changLanguage('HU')">HU</span><br>
+  <span (click)="changLanguage('ENG')">Eng</span>
+</div>
+<div class="projektor" #projektor>
+
+</div>
+
+
+</div>
+
+
+
