--- a/src/app/components/iseeq-home/iseeq-home.component.html
+++ b/src/app/components/iseeq-home/iseeq-home.component.html
@@ -1,8 +1,32 @@
 
 <div class="home-base">
-    <!--<h1>hsdhfshjksdhfs</h1> -->
+  
     <div class="home-blure">
        <a href="/game">game</a><br>
        <a href="/home/services">services</a>
-    </div>   
+    </div>  
+
+    <div id="demo">
+        <p id="cat" #cat (mouseover)="animateCat()"></p>
+        <p id="dog" #dog ></p>
+        <div style="display:flex">
+        <p class="coin" #coin ></p>
+        <p class="coin" #coin2 ></p>
+        <p class="coin" #coin3 ></p>
+        </div>
+    </div>
+
+
 </div>
+
+    
+       
+
+
+
+
+
+
+
+
+
