--- a/src/app/components/iseeq-home/iseeq-home.component.css
+++ b/src/app/components/iseeq-home/iseeq-home.component.css
@@ -11,14 +11,37 @@ a{
 }
 .home-blure{
     min-height:800px;
-    position:absolute;
-    top:0px;
+   
     color:white;
     width:100%;
     height:100%;
     background-color:black;
     opacity:0.4;
-    z-index: 1;
     
-
 }
+#demo{
+    z-index:+2;
+}
+#cat {
+   
+    height: 40px;
+    width:  40px;
+    background:url('/assets/animation/cat.png') 0px 0px;
+    background-repeat: no-repeat;
+  }
+
+  #dog {
+   
+    height: 40px;
+    width:  45px;
+    background:url('/assets/animation/dog.png') 0px 0px;
+    background-repeat: no-repeat;
+  }
+
+  .coin {
+    
+    height: 20px;
+    width:  20px;
+    background:url('/assets/animation/coin.png') 0px 0px;
+    background-repeat: no-repeat;
+  }
