--- a/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.html
+++ b/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.html
@@ -33,30 +33,15 @@
 
 
 <div class="services-container2">
+    <div class="services-collum2">
+            <div class="dekoration" style="position:absolute;top:15px;left:15px;"></div>    
+            <div class="dekoration" style="position:absolute;top:15px;right:15px;"></div>
+            <div class="dekoration" style="position:absolute;bottom:15px;left:15px;"></div>
+            <div class="dekoration" style="position:absolute;bottom:15px;right:15px;"></div>
 
-            <div class="services-collum2">
-                <div class="services-collum-picture"></div>
-                <div class="services-collum-title"></div>
-                <div class="services-collum-text"></div>
-                <div class="services-collum-button"></div> 
-            </div>
-
-            <div class="services-collum2">
-                <div class="services-collum-picture"></div>
-                <div class="services-collum-title"></div>
-                <div class="services-collum-text"></div>
-                <div class="services-collum-button"></div> 
-            </div>
-
-            <div class="services-collum2">
-                <div class="services-collum-picture"></div>
-                <div class="services-collum-title"></div>
-                <div class="services-collum-text"></div>
-                <div class="services-collum-button"></div> 
-            </div>
-
-
-
+            <div class="services-collum2-header"></div>
+            <div class="services-collum2-text"></div> 
+    </div>
 </div>
 
 </div>
