--- a/src/app/components/iseeq-privacypolicy/iseeq-privacypolicy.component.html
+++ b/src/app/components/iseeq-privacypolicy/iseeq-privacypolicy.component.html
@@ -1,13 +1,10 @@
-<div>
 <div class="policy-header">
-  <span (click)="changLanguage('HU')">HU</span><br>
-  <span (click)="changLanguage('ENG')">Eng</span>
-</div>
-<div class="projektor" #projektor>
-
+  <span (click)="changLanguage('English')">English |</span>
+  <span (click)="changLanguage('Magyar')"> Magyar</span>
 </div>
 
-
+<div class="base">
+    <div class="projektor" #projektor></div>
 </div>
 
 
