--- a/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.css
+++ b/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.css
@@ -25,8 +25,14 @@
 }
 
 .services-collum2{
+    position: relative;
     margin:20px;
     width:350px;
     height:500px;
-    border:2px solid blue;
+    background-color: #45d48b;
+}
+.dekoration{
+    background-color:#319662;
+    width:10px;
+    height:10px;
 }
