--- a/src/app/ContetntFeature/components/iseeq-team/iseeq-team.component.html
+++ b/src/app/ContetntFeature/components/iseeq-team/iseeq-team.component.html
@@ -1,4 +1,23 @@
 <div class="site-base">
     <h2 class="site-title">TEAM</h2>
+
+
+<div class="card-border">
+
+<div class="white-corner-left"></div>
+<div class="white-corner-right"></div>
+
+<div class="card-background"></div>
+
 </div>
 
+<div class="bord-bottom"></div>
+
+
+
+
+
+
+
+
+</div>
