--- a/src/app/components/iseeq-home/iseeq-home.component.css
+++ b/src/app/components/iseeq-home/iseeq-home.component.css
@@ -1,47 +1,94 @@
-/*Az alap meretezo es pozicionalo clssokat a képméret fügvényében max-width;max-height ..classokat */
 a{
-    text-decoration:none;
     color:white;
 }
-.home-base{
-    width:100%;
-    height:100%;
-    min-height:800px;
-    border: 1px solid red;
+
+.image{
+    transform: translate(-50%,0%);
+    left:50%;
+    position: relative;
+    top:-120px;
+    height:750px;
+    width: 1350px;
+    background:url("/assets/pictures/home/background.jpg");
+    background-size:100% 100%;
+    background-repeat: no-repeat;
 }
-.home-blure{
-    min-height:800px;
-   
-    color:white;
-    width:100%;
-    height:100%;
-    background-color:black;
-    opacity:0.4;
-    
-}
-#demo{
-    z-index:+2;
-}
-#cat {
-   
+
+.cat {
+    position: absolute;
+    top:312px;
+    left:220px;
     height: 40px;
     width:  40px;
     background:url('/assets/animation/cat.png') 0px 0px;
     background-repeat: no-repeat;
   }
 
-  #dog {
-   
+  .dog {
+    position: absolute;
+    bottom:52px;
+    left:640px;
     height: 40px;
     width:  45px;
     background:url('/assets/animation/dog.png') 0px 0px;
     background-repeat: no-repeat;
   }
+  .coins{
+      display:flex;
+      position: absolute;
+      bottom:15px;
+      left:60px;
+  }
 
   .coin {
-    
+    margin-right:15px;
     height: 20px;
     width:  20px;
     background:url('/assets/animation/coin.png') 0px 0px;
     background-repeat: no-repeat;
+  }
+
+  .game-button{
+      position: absolute;
+      left:50%;
+      top:520px;
+      transform: translate(-50%,0%)
+  }
+
+  .learn-more{
+      font-family: 'pressstart2p';
+      position: absolute;
+      left:50%;
+      transform: translate(-50%,0%);
+      top:700px;
+      color:white;
+      font-size: 15px;
+  }
+
+  @media only screen and (max-width: 1000px) {
+    .image{
+        width: 100%;
+        height:550px;
+        top:0px;
+        background:url("/assets/pictures/home/background0_5x.jpg");
+        background-repeat:no-repeat;
+        background-position: center;
+    }
+    .visible{
+        display:none;
+    }
+
+  }
+
+  @media only screen and (max-width: 500px) {
+    .image{
+        background:url("/assets/pictures/home/background_mob.jpg");
+        background-repeat:no-repeat;
+        background-position:center;
+        top:0px;
+        left:40%;
+        background-size: cover;
+        height:450px;
+       
+    }
   }
