--- a/src/app/components/iseeq-home/iseeq-home.component.html
+++ b/src/app/components/iseeq-home/iseeq-home.component.html
@@ -1,5 +1,25 @@
+<div class="image">
+    <p class="cat visible"  #cat ></p>
+    <p class="dog visible"  #dog ></p>
 
-<div class="home-base">
+    <div class="coins visible">
+        <p class="coin" #coin ></p>
+        <p class="coin" #coin2 ></p>
+        <p class="coin" #coin3 ></p>
+    </div>
+
+    <a href="/game" class="game-button visible">
+        <img src="/assets/pictures/home/btn-go.png" alt="link to the game">
+    </a>
+
+    <a href="/home/services" class="learn-more visible">...or learn more!</a>
+    <span></span>
+</div>
+
+
+
+
+<!--
   
     <div class="home-blure">
        <a href="/game">game</a><br>
@@ -17,7 +37,7 @@
     </div>
 
 
-</div>
+</div>-->
 
     
        
