--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
     <router-outlet></router-outlet>
 </div>
 
-<app-iseeq-footer [style.visibility]="!appNavService.areSitesOpen ? 'hidden' : 'visible'" ></app-iseeq-footer>
+<app-iseeq-footer [style.visibility]="!appNavService.areSitesOpen ? 'hidden' : 'visible'"></app-iseeq-footer>
+<!--[style.visibility]="!appNavService.areSitesOpen ? 'hidden' : 'visible'"-->
