--- a/src/app/ContetntFeature/components/iseeq-team/iseeq-team.component.css
+++ b/src/app/ContetntFeature/components/iseeq-team/iseeq-team.component.css
@@ -1,6 +1,50 @@
+.card-container{
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.blank-card{
+    color:#343399;
+    margin-top:150px;
+}
+
+h3{
+    font-family: 'bitbold', cursive;
+}
+
+p{
+    font-family:'opensans';
+}
+
+/*Team component; card */
+.base-card{
+    height:430px;
+    width:260px;
+    position: relative;
+    margin: 10px;
+}
+.card-top1{
+    position: relative;
+    left:110px;
+    height:10px;
+    width:40px;
+    background-color:#fbba00; 
+}
+
+.card-top2{
+    position: relative;
+    left:95px;
+    height:10px;
+    width:30px;
+    background-color: #ff7e00;
+    border-left:20px solid #fbba00;
+    border-right:20px solid #fbba00;
+}
+
 .card-border{
-    width:300px;
-    height:500px;
+    width:260px;
+    height:400px;
     position: relative;
     background-color: #fbba00;
     border-bottom: 10px solid #ff7e00;
@@ -8,12 +52,14 @@
 }
 
 .card-background{
-    width:280px;
-    height:480px;
+    text-align: center;
+    width:240px;
+    height:380px;
     position:absolute;
     top:10px;
     left:10px;
-    background-color: #45d48b
+    background-color: #45d48b;
+    
 }
 
 .white-corner-left{
@@ -24,6 +70,7 @@
     height:10px;
     background-color: white;
 }
+
 .white-corner-right{
     position: absolute;
     top:0px;
@@ -35,7 +82,11 @@
 
 .bord-bottom{
     position: initial;
-    width:300px;
+    width:260px;
     height:10px;
-    background-color:#fbba00 
+    background-color:#fbba00;
+    border-left: 10px solid white;
+    border-right: 10px solid white;
+    box-sizing: border-box; 
 }
+/*--------------------------------------------------------*/
