--- a/src/app/components/iseeq-home/iseeq-home.component.css
+++ b/src/app/components/iseeq-home/iseeq-home.component.css
@@ -1,15 +1,42 @@
+@keyframes cloudee {
+    from { transform:translateX(0px)}
+    to   { transform:translateX(1500px)}
+}
+
+
+.cloude_1{
+    height:60px;
+    position: absolute;
+    top:120px;
+    left:-20px;
+    opacity:0.3;
+    animation-name: cloudee;
+    animation-duration: 25s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+.hatter{
+    position:fixed;
+    top:0px;
+    left:0px;
+    width: 100%;
+    height:100%;
+    z-index: -1;
+}
+
 a{
     color:white;
 }
-
 .image{
+   
     transform: translate(-50%,0%);
     left:50%;
     position: relative;
     top:-120px;
     height:750px;
     width: 1350px;
-    background:url("/assets/pictures/home/background.jpg");
+    background:url("/assets/pictures/home/background_low_q.jpg");
     background-size:100% 100%;
     background-repeat: no-repeat;
 }
@@ -70,7 +97,7 @@ a{
         width: 100%;
         height:550px;
         top:0px;
-        background:url("/assets/pictures/home/background0_5x.jpg");
+        background:url("/assets/pictures/home/background_m.jpg");
         background-repeat:no-repeat;
         background-position: center;
     }
@@ -82,13 +109,16 @@ a{
 
   @media only screen and (max-width: 500px) {
     .image{
-        background:url("/assets/pictures/home/background_mob.jpg");
+        background:url("/assets/pictures/home/mobil_low.jpg");
         background-repeat:no-repeat;
         background-position:center;
         top:0px;
-        left:40%;
+        left:50%;
         background-size: cover;
-        height:450px;
-       
+    }
+    .hatter{
+        display:none;
     }
   }
+
+
