--- a/src/app/components/iseeq-home/iseeq-home.component.html
+++ b/src/app/components/iseeq-home/iseeq-home.component.html
@@ -1,52 +1,20 @@
 <div class="image">
+    <img class="cloude_1 visible" src="/assets/animation/cloud.png">
+    <img class="cloude_1 visible" style="top:130px;animation-duration:30s;left:-500px;" src="/assets/animation/cloud.png">
+    <img class="cloude_1 visible" style="top:140px;animation-duration:50s;left:-200px;" src="/assets/animation/cloud.png">
+    <img class="cloude_1 visible" style="top:150px;animation-duration:70s" src="/assets/animation/cloud.png">
+    <img class="cloude_1 visible" style="top:120px;animation-duration:35s;left:0px;" src="/assets/animation/cloud.png">
     <p class="cat visible"  #cat ></p>
     <p class="dog visible"  #dog ></p>
-
     <div class="coins visible">
         <p class="coin" #coin ></p>
         <p class="coin" #coin2 ></p>
         <p class="coin" #coin3 ></p>
     </div>
-
     <a href="/game" class="game-button visible">
         <img src="/assets/pictures/home/btn-go.png" alt="link to the game">
     </a>
-
     <a href="/home/services" class="learn-more visible">...or learn more!</a>
-    <span></span>
 </div>
 
-
-
-
-<!--
-  
-    <div class="home-blure">
-       <a href="/game">game</a><br>
-       <a href="/home/services">services</a>
-    </div>  
-
-    <div id="demo">
-        <p id="cat" #cat (mouseover)="animateCat()"></p>
-        <p id="dog" #dog ></p>
-        <div style="display:flex">
-        <p class="coin" #coin ></p>
-        <p class="coin" #coin2 ></p>
-        <p class="coin" #coin3 ></p>
-        </div>
-    </div>
-
-
-</div>-->
-
-    
-       
-
-
-
-
-
-
-
-
-
+<img class="hatter" src="/assets/pictures/home/hatter.jpg">
