--- a/src/styles.css
+++ b/src/styles.css
@@ -53,6 +53,7 @@ a{
     text-decoration: none;
 }
 .site-base{
+    min-height:1000px;
     height: 1000px;
     border:1px solid black;
     overflow: hidden;
