--- a/src/app/ContetntFeature/components/iseeq-team/iseeq-flip-card.component.html
+++ b/src/app/ContetntFeature/components/iseeq-team/iseeq-flip-card.component.html
@@ -8,7 +8,7 @@
             <div class="card-background" >
                 
                 <div [style.visibility]="frontContentVisibility" class="front-content">
-                    <img  [src]=teamMember.profilePicture [alt]=teamMember.pictureAlt>
+                    <img class="profile-picture" [src]=teamMember.profilePicture [alt]=teamMember.pictureAlt>
                 </div>
 
                 <div [style.visibility]="backContentVisibility"class="back-content" >
@@ -17,7 +17,7 @@
 
                     <div class="ikon-container">
                     <div class="ikon" *ngFor="let contact of teamMember.contacts">
-                        <a [href]=contact.link>
+                        <a [href]=contact.link target="_blank">
                           <img class="ikon-img" [src]=contact.ikon width="20" height="20" [alt]=contact.alt>
                         </a>
                     </div>
