--- a/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.html
+++ b/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.html
@@ -1,48 +1,133 @@
-<div class="site-base">
+<div>
     <h2 class="site-title">SERVICES</h2>
     
 
 <div class="services-container">
 
             <div class="services-collum">
-                <div class="services-collum-picture"></div>
-                <div class="services-collum-title"></div>
-                <div class="services-collum-text"></div>
-                <div class="services-collum-button"></div> 
+                <div class="services-collum-picture">
+                    <div class="dekoration" style="position:absolute;top:15px;left:15px;"></div>    
+                    <div class="dekoration" style="position:absolute;top:15px;right:15px;"></div>
+                    <div class="dekoration" style="position:absolute;bottom:15px;left:15px;"></div>
+                    <div class="dekoration" style="position:absolute;bottom:15px;right:15px;"></div>
+                </div>
+                
+                    <p class="services-collum-title">We know<br><span>THE DOMAIN</span></p>
+            
+                <div  [@cstate]="collumState" class="services-collum-text">
+                    <p>We are not only recruiters, but industry experts genuinely interested in the specific domain we are recruiting for. 
+                       We equally understand the language a Node.JS Developer, a CTO or an FMCG Sales Manager speaks, which helps us to find 
+                       the most relevant candidates based on your needs.
+                    </p>
+                </div>
+                <div class="services-collum-button">hgjgfjfghj</div>
             </div>
+
 
             <div class="services-collum">
-                <div class="services-collum-picture"></div>
-                <div class="services-collum-title"></div>
-                <div class="services-collum-text"></div>
-                <div class="services-collum-button"></div> 
+                    <div class="services-collum-picture">
+                            <div class="dekoration" style="position:absolute;top:15px;left:15px;"></div>    
+                            <div class="dekoration" style="position:absolute;top:15px;right:15px;"></div>
+                            <div class="dekoration" style="position:absolute;bottom:15px;left:15px;"></div>
+                            <div class="dekoration" style="position:absolute;bottom:15px;right:15px;"></div>
+                    </div>
+                    
+                        <p class="services-collum-title">We know<br><span>THE MARKET</span></p>
+                
+                    <div [@cstate]="collumState" class="services-collum-text">
+                        <p>As we are working with leading, future-shaping companies, we can keep you up-to-date on industry 
+                            trends. We can also help you match your requirements and expectations to market realities 
+                            for saving time and increasing hiring efficiency.
+                        </p>
+                    </div>
+                    <div class="services-collum-button">hgjgfjfghj</div>
             </div>
+
 
             <div class="services-collum">
-                <div class="services-collum-picture"></div>
-                <div class="services-collum-title"></div>
-                <div class="services-collum-text"></div>
-                <div class="services-collum-button"></div> 
+                    <div class="services-collum-picture">
+                        <div class="dekoration" style="position:absolute;top:15px;left:15px;"></div>    
+                        <div class="dekoration" style="position:absolute;top:15px;right:15px;"></div>
+                        <div class="dekoration" style="position:absolute;bottom:15px;left:15px;"></div>
+                        <div class="dekoration" style="position:absolute;bottom:15px;right:15px;"></div>
+                    </div>
+                        
+                        <p class="services-collum-title">We know<br><span>THE PEOPLE</span></p>
+                    
+                    <div [@cstate]="collumState" class="services-collum-text">
+                        <p>We participle at various professional events and organize several ourselves as well. These range from meetups and 
+                            conferences to events that attract thousands of people. Through these events we develop long-term, personal 
+                            relationships, resulting in unique network of hidden talent pool, which helps us to reach candidates who are
+                            not on the job market. We never advertise the positions, we only use our own network and referrals through it.
+                        </p>
+                    </div>
+                    <div class="services-collum-button">hgjgfjfghj</div> 
             </div>
 
-
+            
 
 </div>
 
-<h2 class="alcim">jkhkjahjk jsdfhas jfljk lkjfkasdj lkj fasd flkdjf</h2>
+    <h2 class="alcim">We offer HR SERVICES for IT, SALES/MARKETING and FINANCE</h2>
 
 
-<div class="services-container2">
-    <div class="services-collum2">
-            <div class="dekoration" style="position:absolute;top:15px;left:15px;"></div>    
-            <div class="dekoration" style="position:absolute;top:15px;right:15px;"></div>
-            <div class="dekoration" style="position:absolute;bottom:15px;left:15px;"></div>
-            <div class="dekoration" style="position:absolute;bottom:15px;right:15px;"></div>
+        <div class="services-container2">
+            
+            <div class="services-collum2">
+                    <div class="dekoration" style="position:absolute;top:15px;left:15px;"></div>    
+                    <div class="dekoration" style="position:absolute;top:15px;right:15px;"></div>
+                    <div class="dekoration" style="position:absolute;bottom:15px;left:15px;"></div>
+                    <div class="dekoration" style="position:absolute;bottom:15px;right:15px;"></div>
 
-            <div class="services-collum2-header"></div>
-            <div class="services-collum2-text"></div> 
-    </div>
-</div>
+                    <div class="services-collum2-header">
+                        <h3>RECRUITMENT</h3>
+                    </div>
+
+                    <div class="services-collum2-text">
+                        <p>With IseeQ’s <b>end to end recruitment</b> solutions you can meet the ‘A’ Players of the employee’s market. 
+                           No advertising, no passive recruitment,  just <b>pure networking</b> and headhunting. As we are deeply involved 
+                           in Europe’s tech, startup and business event scene, we have a great overview of the talents, and easy access to their network.
+                        </p>
+                    </div> 
+            </div>
+
+            <div class="services-collum2">
+                    <div class="dekoration" style="position:absolute;top:15px;left:15px;"></div>    
+                    <div class="dekoration" style="position:absolute;top:15px;right:15px;"></div>
+                    <div class="dekoration" style="position:absolute;bottom:15px;left:15px;"></div>
+                    <div class="dekoration" style="position:absolute;bottom:15px;right:15px;"></div>
+
+                    <div class="services-collum2-header">
+                        <h3>ON-SITE RECRUITMENT</h3>
+                    </div>
+                    
+                    <div class="services-collum2-text">
+                        <p>With our onsite recruitment services we are creating impeccably <b>tailored and personalised in-house solution</b> 
+                           based on your needs. This includes the full recruitment cycle and cover all related topics like, <b>supporting hiring managers</b> directly, 
+                           contacting staff referrals and other applicants from different sources, pre-screening, arranging interviews, coaching interviewers, doing technology 
+                           related <b>market research</b> or anything else you have in mind.
+                        </p>
+                    </div> 
+            </div>
+
+            <div class="services-collum2">
+                <div class="dekoration" style="position:absolute;top:15px;left:15px;"></div>    
+                <div class="dekoration" style="position:absolute;top:15px;right:15px;"></div>
+                <div class="dekoration" style="position:absolute;bottom:15px;left:15px;"></div>
+                <div class="dekoration" style="position:absolute;bottom:15px;right:15px;"></div>
+
+                <div class="services-collum2-header">
+                        <h3>CONSULTANCY</h3>
+                </div>
+                <div class="services-collum2-text">
+                    <p>Would you like to boost your <b>Employer Branding</b>? Create the most <b>innovative recruitment solutions</b>? Or you have a mission critical 
+                       nearly impossible HR related project you need some help with? In the last years we delivered very exciting, highly effective 
+                       tailor made solutions to our diverse client base.
+                    </p>
+                </div> 
+            </div>
+
+        </div>
 
 </div>
 
