--- a/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.css
+++ b/src/app/ContetntFeature/components/iseeq-services/iseeq-services.component.css
@@ -1,24 +1,77 @@
+b{
+    color:#32644a
+}
 .services-container{
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     margin-top:20px;
     margin-bottom:20px;
 }
 
 .services-collum{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
     margin:20px;
-    width:300px;
-    height:450px;
-    border:2px solid blue;
+    width:250px;
+}
+
+.services-collum-picture{
+    position:relative;
+    width:150px;
+    height:150px;
+    background-color: #45d48b;
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+}
+
+.services-collum-picture:hover{
+    transform: scale(1.2);
+}
+
+
+.services-collum-title{
+    float:left;
+    font-size:35px;
+    font-family:'brandonbld';
+    position:relative;
+    right:20px;
+    line-height: 90%;
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+
+span{
+    font-family:'bitbold';
+    font-size:25px;
+}
+
+.services-collum-text{
+    line-height: 200%;
+    overflow: hidden;
+}
+
+.services-collum-button{
+    position: relative;
+    bottom: 10px;
+    text-align: center;
+    width:100%;
+    opacity: 0.9;
+    padding-top:10px;
+    box-shadow: 0px -10px 20px 0px white;
+    background-color: white;
+
 }
 
 .alcim{
-    font-size:25px;
+    font-size:30px;
+    font-family:'brandonbld';
     text-align: center;
 }
-
 .services-container2{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     margin-top:20px;
     margin-bottom:20px;
@@ -27,12 +80,49 @@
 .services-collum2{
     position: relative;
     margin:20px;
-    width:350px;
-    height:500px;
+    min-width:280px;
+    max-width:350px;
     background-color: #45d48b;
+    font-family:'opensans';
 }
 .dekoration{
     background-color:#319662;
     width:10px;
     height:10px;
+}
+
+h3{
+    margin-top:80px;
+    font-size:25px;
+    color:white;
+    text-align: center;
+    font-weight: 400;
+}
+
+.services-collum2-text{
+    margin-bottom: 50px;
+    margin-left:30px;
+    margin-right:30px;
+    font-size:16px;
+    color:#2a8255;
+    line-height: 200%;
+}
+
+
+@media only screen and (max-width: 400px) {
+    h3{
+        margin-top:40px;
+        font-size:20px;
+    }
+    
+    .services-collum2-text{
+        margin-bottom: 40px;
+        margin-left:15px;
+        margin-right:15px;
+        font-size:15px;
+        line-height: 170%;
+    }
+    .alcim{
+        font-size:25px;
+    }
 }
