--- a/src/styles.css
+++ b/src/styles.css
@@ -46,6 +46,9 @@
 body{
     margin:0px;
     background-color:white;
+    font-family:'opensans';
+    color:#1b2e24;
+    font-size:16px;
    
 }
 
